<resources>
    <string name="app_name">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_attendance">Attendance</string>

</resources>